# TinyWorld_Survival_LLM_Bench

./: .gitignore  README.md  pyproject.toml
analysis/: __init__.py  failure_archetypes.json  failure_archetypes.py  run_analyzer.py  summary_builder.py
artifacts/tmp/: npc_render_smoke.html
bench/: aggregate.py  cli_ui.py  common.py  play_human.py  pricing.py  run_compare.py  run_match.py  run_suite.py  view_compare.py  view_human.py  view_log.py  view_runs.py
configs/: benchmark.yaml  official_benchmark_v0_1.yaml  pricing.yaml  providers.example.yaml  providers.local.yaml  providers.yaml  scenarios.yaml
engine/: actions.py  observation.py  parser.py  prompt_loader.py  rules.py  scoring.py  version.py  world.py
memory/: __init__.py  filter.py  reflection.py  session.py  summarizer.py
models/: anthropic_wrapper.py  base.py  dummy.py  local_wrapper.py  openai_wrapper.py
prompts/partials/: action_reference.md  engine_contract.md  memory_block.md  moral_guidance.md  output_contract.md  rules.md
prompts/system/: agent_core.md  reflection_core.md
prompts/user/: reflection_cross_seed.md  reflection_lessons.md  reflection_seed_rerun.md  (+2 more)
renderers/: human_renderer.py  json_renderer.py
showcase/: seed2_initial_duel_video.html  tinyworld_arcade_engine_template.html
tests/: test_combat.py  test_integration_match.py  test_memory_reflection.py  test_memory_session.py  test_model_config.py  test_parser.py  test_pricing.py  test_prompt_loader.py  test_run_analysis.py  test_run_compare.py  test_scoring.py  test_view_compare.py  test_view_log.py  test_world.py
(+31 files in other folders)
